--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@heroui/react": "^2.6.14",
     "@heroui/theme": "^2.4.6",
     "@supabase/supabase-js": "^2.48.0",
-    "apexcharts": "^4.3.0",
+    "apexcharts": "^4.4.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.1",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
